# vof

./: .gitignore  BINARY.md  CONTRIBUTING.md  JSON_APIs.md  LICENSE  LICENSE.txt  Makefile  README.md  SPECIFICATION.md  TODO.md  binary.md  idl_draft.md  json.md  test_vectors.md
csharp/: TODO.md
javascript/: TODO.md
ocaml/: .gitignore  .ocamlformat  Makefile  README.md  TODO.md  dune  dune-project  float16.ml  float16.mli  vof.ml  vof.mli  vof_bin.ml  vof_bin.mli  vof_cbor.ml  vof_cbor.mli  vof_enc.ml  vof_json.ml  vof_json.mli  vof_lib.ml  vof_test.ml  vof_test_cbor.ml  vof_vectors.ml
perl5/: .gitignore  Changes  MANIFEST  Makefile.PL  README.md  TODO.md
perl5/lib/: VOF.pm
perl5/lib/VOF/: JSON.pm
perl5/t/: 00_load.t  01_helpers.t  02_constructors.t  03_readers.t  04_context.t  05_json_decode.t  06_json_encode.t  07_roundtrip.t
perl5/t/data/: test_dup_alias.txt  test_foreign_ns.txt  test_symbols.txt
php/: TODO.md
python3/: TODO.md
