(library
 (name vof_lib)
 (modules vof_lib)
 (libraries unix)
 (instrumentation
  (backend bisect_ppx)))

(library
 (name vof)
 (wrapped false)
 (modules :standard \ vof_test vof_lib)
 (private_modules vof_enc)
 (libraries unix base64 ipaddr vof_lib)
 (instrumentation
  (backend bisect_ppx)))

(test
 (name vof_test)
 (modules vof_test)
 (libraries vof_lib vof alcotest qcheck qcheck-alcotest))

(env
 (default
  (ocamlopt_flags
   (:standard -O2)))
 (coverage
  (flags
   (:standard -w -71))
  (ocamlopt_flags
   (:standard -O2))))
